chore(use-vue) : install use vue component

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
+    "@vueuse/components": "^12.7.0",
     "@vueuse/core": "^12.7.0",
     "axios": "^1.7.9",
     "json-server": "^1.0.0-beta.3",
