--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
+    "@tanstack/vue-query": "^5.66.0",
     "@vueuse/components": "^12.7.0",
     "@vueuse/core": "^12.7.0",
     "axios": "^1.7.9",
     "json-server": "^1.0.0-beta.3",
     "lucide-vue-next": "^0.475.0",
+    "pinia": "^3.0.1",
     "tailwindcss": "^4.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
