--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/components": "^12.7.0",
     "@vueuse/core": "^12.7.0",
     "axios": "^1.7.9",
+    "firebase": "^11.4.0",
     "json-server": "^1.0.0-beta.3",
     "lucide-vue-next": "^0.475.0",
     "pinia": "^3.0.1",
